--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace "io.agora.agora_uikit"
+    namespace "io.agora.agora_flutter_uikit"
     compileSdkVersion 33
 
     compileOptions {
